--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "calcsanidhya": "^1.0.0",
     "express": "^4.18.3",
     "mongodb": "^6.4.0",
+    "nodemailer": "^6.9.12",
     "sqlite3": "^5.1.7"
   }
 }
